--- a/trunk/src/WaveletStudio.Designer/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.Designer/Properties/Resources.resx
@@ -667,4 +667,7 @@ Portuguese (Brazil)</value>
   <data name="imgNotEqualsToMini" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgNotEqualsToMini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CSharpFile" xml:space="preserve">
+    <value>C# File</value>
+  </data>
 </root>
